--- a/week_05/case_study_05.Rmd
+++ b/week_05/case_study_05.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Case Study 05"
-author: Your Name
-date: August 1, 2020
+author: Kaitlyn Biehler
+date: October 1, 2022
 output: github_document
 ---
  
