--- a/week_05/case_study_05.Rmd
+++ b/week_05/case_study_05.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Case Study 05"
 author: Kaitlyn Biehler
-date: October 1, 2022
+date: October 4, 2022
 output: github_document
 ---
- 
+ #GEO511 case study 5
+ #Beware the Canadians!
